--- a/index.html
+++ b/index.html
@@ -1,11 +1,68 @@
 <!DOCTYPE html>
-<html>
-  <body style="margin:0; background:black;">
-    <iframe
-      src="https://www.youtube.com/embed/3at_m1J1O4I?autoplay=1&mute=1&loop=1&playlist=3at_m1J1O4I&controls=0"
-      style="width:100vw; height:100vh; border:0;"
-      allow="autoplay; encrypted-media"
-      allowfullscreen>
-    </iframe>
-  </body>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>YouTube Loop</title>
+<style>
+  html, body {
+    margin:0;
+    width:100%;
+    height:100%;
+    background:black;
+    overflow:hidden;
+  }
+  #player {
+    width:100%;
+    height:100%;
+  }
+  #hint {
+    position:absolute;
+    inset:0;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    color:white;
+    font-size:22px;
+    background:rgba(0,0,0,0.35);
+    pointer-events:none;
+  }
+</style>
+</head>
+<body>
+
+<div id="player"></div>
+<div id="hint">Click to unmute</div>
+
+<script src="https://www.youtube.com/iframe_api"></script>
+<script>
+  let player;
+  const hint = document.getElementById("hint");
+
+  function onYouTubeIframeAPIReady() {
+    player = new YT.Player('player', {
+      videoId: '3at_m1J1O4I', // your video ID
+      playerVars: {
+        autoplay: 1,
+        mute: 1,
+        loop: 1,
+        playlist: '3at_m1J1O4I',
+        controls: 0,
+        modestbranding: 1
+      },
+      events: {
+        onReady: () => { /* ready to play */ }
+      }
+    });
+  }
+
+  const unmute = () => {
+    player.unMute();
+    hint.remove();
+    document.removeEventListener('click', unmute);
+  };
+
+  document.addEventListener('click', unmute);
+</script>
+
+</body>
 </html>
