--- a/index.html
+++ b/index.html
@@ -2,28 +2,14 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>YouTube Loop</title>
+<title>YouTube Loop Click-to-Unmute</title>
 <style>
-  html, body {
-    margin:0;
-    width:100%;
-    height:100%;
-    background:black;
-    overflow:hidden;
-  }
-  #player {
-    width:100%;
-    height:100%;
-  }
+  html, body { margin:0; width:100%; height:100%; overflow:hidden; background:black; }
+  #player { width:100%; height:100%; }
   #hint {
-    position:absolute;
-    inset:0;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    color:white;
-    font-size:22px;
-    background:rgba(0,0,0,0.35);
+    position:absolute; inset:0; display:flex;
+    justify-content:center; align-items:center;
+    color:white; font-size:22px; background:rgba(0,0,0,0.35);
     pointer-events:none;
   }
 </style>
@@ -40,28 +26,27 @@
 
   function onYouTubeIframeAPIReady() {
     player = new YT.Player('player', {
-      videoId: '3at_m1J1O4I', // your video ID
+      videoId: '3at_m1J1O4I',
       playerVars: {
         autoplay: 1,
         mute: 1,
         loop: 1,
         playlist: '3at_m1J1O4I',
         controls: 0,
-        modestbranding: 1
+        modestbranding: 1,
+        enablejsapi: 1
       },
       events: {
-        onReady: () => { /* ready to play */ }
+        onReady: () => {
+          // Now the player is ready
+          document.addEventListener('click', () => {
+            player.unMute();
+            hint.remove();
+          }, { once: true }); // only first click
+        }
       }
     });
   }
-
-  const unmute = () => {
-    player.unMute();
-    hint.remove();
-    document.removeEventListener('click', unmute);
-  };
-
-  document.addEventListener('click', unmute);
 </script>
 
 </body>
